cluster/infrastructure/networkpolicies/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicies
  labels:
    pod-security.kubernetes.io/enforce: baseline
